--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^5.5.0",
     "esri-loader": "^2.3.0",
     "jquery": "^3.3.1",
+    "npm": "^6.4.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
